create github pages

--- a/seriodesignfxyoutube.html
+++ b/seriodesignfxyoutube.html
@@ -115,7 +115,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/m">drag and drop web builder</a></section><section class="mbr-section content5 cid-qQr8jZRdIV mbr-parallax-background" id="content5-4f">
+<section class="engine"><a href="https://mobirise.ws/g">how to create free website</a></section><section class="mbr-section content5 cid-qQr8jZRdIV mbr-parallax-background" id="content5-4f">
 
     
 
@@ -134,7 +134,7 @@ s.parentNode.insertBefore(b, s);})();
     </div>
 </section>
 
-<section class="mbr-social-feed loading" id="feed-4g" data-facebook="" data-twitter="" data-google="" data-posts="5" data-youtube="UCrkwLLp3vRrF_HrQ_YlY6_Q" data-rv-view="711" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-social-feed loading" id="feed-4g" data-facebook="" data-twitter="" data-google="" data-posts="5" data-youtube="UCrkwLLp3vRrF_HrQ_YlY6_Q" data-rv-view="803" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 40px;">
     
     <img class="social-feed-container-loading" alt="">
     <div class="social-feed-container">
@@ -162,7 +162,7 @@ s.parentNode.insertBefore(b, s);})();
                         <a class="text-white mbr-bold" href="index.html#content5-j" target="_blank">Services</a>
                     </li><li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="mailto:seriodsgn@gmail.com">Get In Touch</a>
-                    </li><li class="foot-menu-item mbr-fonts-style display-7"></li><li class="foot-menu-item mbr-fonts-style display-7"></li></ul>
+                    </li><li class="foot-menu-item mbr-fonts-style display-7"><a href="disclaimer.html#content5-4k" class="text-warning"><strong>Disclaimer</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"></li></ul>
             </div>
             <div class="row">
                 <div class="social-list align-right pb-2">
