--- a/untangletheinternet.html
+++ b/untangletheinternet.html
@@ -117,7 +117,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/b">best free website creator</a></section><section class="mbr-section content5 cid-qJ6Cs8aj11 mbr-parallax-background" id="content5-2n">
+<section class="engine"><a href="https://mobirise.ws/f">easy web creator</a></section><section class="mbr-section content5 cid-qJ6Cs8aj11 mbr-parallax-background" id="content5-2n">
 
     
 
@@ -230,7 +230,7 @@ s.parentNode.insertBefore(b, s);})();
     </div>
 </section>
 
-<section class="mbr-section mbr-section__comments" id="facebook-comments-block-3g" data-rv-view="476" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="mbr-section mbr-section__comments" id="facebook-comments-block-3g" data-rv-view="568" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
          
     <div class="mbr-section__container mbr-section__container--isolated addons-container">
         <div class="addons-row">
@@ -262,7 +262,7 @@ s.parentNode.insertBefore(b, s);})();
                         <a class="text-white mbr-bold" href="index.html#content5-j" target="_blank">Services</a>
                     </li><li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="mailto:seriodsgn@gmail.com">Get In Touch</a>
-                    </li><li class="foot-menu-item mbr-fonts-style display-7"></li><li class="foot-menu-item mbr-fonts-style display-7"></li></ul>
+                    </li><li class="foot-menu-item mbr-fonts-style display-7"><a href="disclaimer.html#content5-4k" class="text-warning"><strong>Disclaimer</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"></li></ul>
             </div>
             <div class="row">
                 <div class="social-list align-right pb-2">
