--- a/blogarticles.html
+++ b/blogarticles.html
@@ -112,7 +112,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/j">design your own website</a></section><section class="mbr-section content5 cid-qGAgfBsP55 mbr-parallax-background" id="content5-1s">
+<section class="engine"><a href="https://mobirise.ws/g">how to create your own website</a></section><section class="mbr-section content5 cid-qGAgfBsP55 mbr-parallax-background" id="content5-1s">
 
     
 
@@ -243,7 +243,7 @@ s.parentNode.insertBefore(b, s);})();
                         <a class="text-white mbr-bold" href="index.html#content5-j" target="_blank">Services</a>
                     </li><li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="mailto:seriodsgn@gmail.com">Get In Touch</a>
-                    </li><li class="foot-menu-item mbr-fonts-style display-7"></li><li class="foot-menu-item mbr-fonts-style display-7"></li></ul>
+                    </li><li class="foot-menu-item mbr-fonts-style display-7"><a href="disclaimer.html#content5-4k" class="text-warning"><strong>Disclaimer</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"></li></ul>
             </div>
             <div class="row">
                 <div class="social-list align-right pb-2">
