--- a/portfolio.html
+++ b/portfolio.html
@@ -121,7 +121,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/g">how to create your own website</a></section><section class="header2 cid-qHjJM68c3l mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=l8UXhtqV6hU" id="header2-26">
+<section class="engine"><a href="https://mobirise.ws/m">drag and drop website maker</a></section><section class="header2 cid-qHjJM68c3l mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=l8UXhtqV6hU" id="header2-26">
 
     
 
@@ -352,7 +352,7 @@ s.parentNode.insertBefore(b, s);})();
             <div class="form-1 col-md-8 col-sm-12" data-form-type="formoid">
                 <h1 class="mbr-fonts-style mbr-section-heading display-2">Get in touch</h1>
                 <div data-form-alert="" hidden="">Thanks watch for my phone call!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jDV+UoOBIi3v2RQOj0GsJ+/6L+/wHSAY0zm4D1GneBZdHWe9qUUEMosNP16XW8wlDgY7e4r3EVbOju4GDHxdDfFJMdNDmkeX9+pyCHj7dQQr9GgUFrSDFAwCvZGkLZiE" data-form-field="Email">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="biP/c+38GHBklcCaP2/nEXGLIImVhmlKmvG2K9oRZvZn03Q48HhTwH5dZ0vO8Umwh8zwZkoLCK9/s1Iy3Bz+8r7tGlXvZcQFe7Pkw65QssQohSgPW0aZrCPE1vCQmLaz" data-form-field="Email">
                     <div class="row input-main">
                         <div class="col-md-6 input-wrap" data-for="name">
                             <input type="text" class="field display-7" name="name" data-form-field="Name" placeholder="Name*" required="" id="name-form2-25">
@@ -400,7 +400,7 @@ s.parentNode.insertBefore(b, s);})();
                         <a class="text-white mbr-bold" href="index.html#content5-j" target="_blank">Services</a>
                     </li><li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="mailto:seriodsgn@gmail.com">Get In Touch</a>
-                    </li><li class="foot-menu-item mbr-fonts-style display-7"></li><li class="foot-menu-item mbr-fonts-style display-7"></li></ul>
+                    </li><li class="foot-menu-item mbr-fonts-style display-7"><a href="disclaimer.html#content5-4k" class="text-warning"><strong>Disclaimer</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"></li></ul>
             </div>
             <div class="row">
                 <div class="social-list align-right pb-2">
