--- a/privacy.html
+++ b/privacy.html
@@ -111,7 +111,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/p">open source web page maker</a></section><section class="mbr-section content5 cid-qPjZdnN2lp mbr-parallax-background" id="content5-4c">
+<section class="engine"><a href="https://mobirise.ws/p">open source website maker</a></section><section class="mbr-section content5 cid-qPjZdnN2lp mbr-parallax-background" id="content5-4c">
 
     
 
@@ -212,7 +212,7 @@ s.parentNode.insertBefore(b, s);})();
                         <a class="text-white mbr-bold" href="index.html#content5-j" target="_blank">Services</a>
                     </li><li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="mailto:seriodsgn@gmail.com">Get In Touch</a>
-                    </li><li class="foot-menu-item mbr-fonts-style display-7"></li><li class="foot-menu-item mbr-fonts-style display-7"></li></ul>
+                    </li><li class="foot-menu-item mbr-fonts-style display-7"><a href="disclaimer.html#content5-4k" class="text-warning"><strong>Disclaimer</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"></li></ul>
             </div>
             <div class="row">
                 <div class="social-list align-right pb-2">
