create github pages

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/b">best website creator</a></section><section class="header7 cid-qvSK4HTIRN mbr-fullscreen mbr-parallax-background" id="header7-3">
+<section class="engine"><a href="https://mobirise.ws/n">free website creator app</a></section><section class="header7 cid-qvSK4HTIRN mbr-fullscreen mbr-parallax-background" id="header7-3">
 
     
 
@@ -163,7 +163,7 @@ s.parentNode.insertBefore(b, s);})();
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure pr-lg-5" style="width: 25%;">
-              <a href="http://metrosecurityserviceswi.com"><img src="assets/images/logolarge-1-507x538.jpg" alt="Metro Security Services Logo" title="Metro Security Services Wisconsin"></a>
+              <a href="http://metrosecurityserviceswi.com"><img src="assets/images/logolarge-1-507x538.jpg" alt="Branding Services Metro Security Services Logo" title="Branded Website Video Landing Metro Security Services Wi"></a>
             </div>
             <div class="media-content px-3 align-self-center mbr-white py-2">
                     <p class="mbr-text testimonial-text mbr-fonts-style display-7"><span style="font-style: normal;"><a href="https://metrosecurityserviceswi.com" target="_blank" class="text-info">Metro Security Services of Wisconsin</a> needed an entirely new website because the current web company didn't complete the site, they &nbsp;wanted more money for anything. We contracted SERIO Design FX  for a complete design. They created the web design, Facebook video and social media. &nbsp;The online prescence was a bonus because no one offered that for FREE....</span></p>
@@ -214,7 +214,7 @@ s.parentNode.insertBefore(b, s);})();
         <div class="user row">
           <div class="col-lg-3 col-md-4">
             <div class="user_image">
-              <a href="https://onyxcateringcompany.com"><img src="assets/images/daphnephoto-300x300.jpg" alt="ONYX Catering Company Memphis" title="Chef Daphne"></a>
+              <a href="https://onyxcateringcompany.com"><img src="assets/images/daphnephoto-300x300.jpg" alt="ONYX Catering Company Video Website Chef Daphne Memphis" title="Website Video Landing Page SERIO Design FX"></a>
             </div>
           </div>
           <div class="testimonials-caption col-lg-9 col-md-8">
@@ -258,7 +258,7 @@ s.parentNode.insertBefore(b, s);})();
                     </div>                
 
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">We produce braned video for web design and social media. A YouTube video shows in the index within an hour.</p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><strong><em><a href="https://viddyoze.com/" target="_blank" class="text-secondary">We create stunning branded video for </a><br><a href="https://viddyoze.com/" target="_blank" class="text-secondary">web design and </a><br><a href="https://viddyoze.com/" target="_blank" class="text-secondary">social media. </a>&nbsp;</em></strong><br> YouTube video shows on GOOGLE within an hour.</p>
                     </div>
                 </div>
 
@@ -272,13 +272,13 @@ s.parentNode.insertBefore(b, s);})();
                         </div>
                     </div>
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Customer converting video websites. 80% of all internet viewing is on a smartphone.&nbsp;</p><div>Design<br>&nbsp;$45 per hour</div><p></p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><a href="https://www.interaction-design.org/literature/article/if-your-user-can-t-find-you-you-won-t-have-any-users-mobile-applications-and-discoverability" class="text-secondary">Customer converting video websites. 80% of all internet viewing is on a smartphone.&nbsp;</a></p><div>Design<br>&nbsp;$45 per hour</div><p></p>
                     </div>
                 </div>
             </div>
 
             <div class="mbr-figure" style="width: 50%;">
-                <a href="company.html#header7-10"><img src="assets/images/joxi-screenshot-seriodesignfx-1075x583.png" alt="SERIO Design FX Portfolio" title="SERIO Design FX Portfolio"></a>
+                <a href="company.html#header7-10"><img src="assets/images/joxi-screenshot-seriodesignfx-1075x583.png" alt="SERIO Design FX Video Landing Page Company Mission" title="SERIO Design FX Video Landing Page Company Mission"></a>
             </div>
 
             <div class="block-content align-left  ">
@@ -293,7 +293,7 @@ s.parentNode.insertBefore(b, s);})();
                     </div>                
 
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">We analyze, monitor and improve your website and track social media for effectiveness.</p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><a href="https://www.screamingfrog.co.uk/seo-spider/" target="_blank" class="text-secondary">We analyze, monitor and improve your website for effectiveness using Screaming Frog SEO Spider .</a></p>
                     </div>
                 </div>
 
@@ -307,7 +307,7 @@ s.parentNode.insertBefore(b, s);})();
                         </div>
                     </div>
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Distibution of social media based on a lead generating strategy.</p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><a href="https://buffer.com" class="text-secondary">Distibution of social media based on a lead generating strategy using BUFFER.</a></p>
                     </div>
                 </div>
             </div>
@@ -363,7 +363,7 @@ s.parentNode.insertBefore(b, s);})();
         <div class="user row">
           <div class="col-lg-3 col-md-4">
             <div class="user_image">
-              <a href="https://www.facebook.com/mytravelagent08/"><img src="assets/images/emilyphoto-145x145.jpg" alt="Emily Davis" title="My Travel Agent08"></a>
+              <a href="https://www.facebook.com/mytravelagent08/"><img src="assets/images/emilyphoto-145x145.jpg" alt="Emily Davis My Travel Agent " title="Facebook Social Media Video for My Travel Agent08"></a>
             </div>
           </div>
           <div class="testimonials-caption col-lg-9 col-md-8">
@@ -379,7 +379,7 @@ s.parentNode.insertBefore(b, s);})();
         <div class="user row">
           <div class="col-lg-3 col-md-4">
             <div class="user_image">
-              <a href="https://www.facebook.com/allstarkutter/"><img src="assets/images/allstarbldg-300x169.jpg" alt="All Star Kutz Barber Shop Milwaukee" title="All Star Kutz Barber Shop Milwaukee Andre"></a>
+              <a href="https://www.facebook.com/allstarkutter/"><img src="assets/images/allstarbldg-300x169.jpg" alt="Facebook Page All Star Kutz Barber Shop Milwaukee" title="Facebook Cover Video SERIO Design FX"></a>
             </div>
           </div>
           <div class="testimonials-caption col-lg-9 col-md-8">
@@ -394,7 +394,7 @@ s.parentNode.insertBefore(b, s);})();
         <div class="user row">
           <div class="col-lg-3 col-md-4">
             <div class="user_image">
-              <a href="https://friendsofkenginlack.com" target="_blank"><img src="assets/images/kenneth-ginlack-web-10-18-18-150x150.jpg" alt="Friends Of Ken Ginlack" title="Kenneth Ginlack Sr."></a>
+              <a href="https://friendsofkenginlack.com"><img src="assets/images/kenneth-ginlack-web-10-18-18-150x150.jpg" alt="Friends Of Ken Ginlack Video Website Landing Page" title="Video Landing Page Kenneth Ginlack"></a>
             </div>
           </div>
           <div class="testimonials-caption col-lg-9 col-md-8">
@@ -530,7 +530,7 @@ s.parentNode.insertBefore(b, s);})();
     </div>
 </section>
 
-<div id="custom-html-2c" custom-code="true" data-rv-view="69"><!-- Contact Form by Steve Riches - RichoSoft Squared - (C) 2016 - All Rights Reserved -->
+<div id="custom-html-2c" custom-code="true" data-rv-view="71"><!-- Contact Form by Steve Riches - RichoSoft Squared - (C) 2016 - All Rights Reserved -->
 <!-- December 2016 - www.richosoft2.co.uk -->
 <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
     <section>
