--- a/trustwebdesign.html
+++ b/trustwebdesign.html
@@ -122,7 +122,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/m">drag and drop website creator</a></section><section class="mbr-section content5 cid-qKr1IsDyae mbr-parallax-background" id="content5-3n">
+<section class="engine"><a href="https://mobirise.ws/j">design free website</a></section><section class="mbr-section content5 cid-qKr1IsDyae mbr-parallax-background" id="content5-3n">
 
     
 
@@ -173,8 +173,8 @@ s.parentNode.insertBefore(b, s);})();
         <div class="media-container-row">
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 <ol>
-                    <li><strong>HOPE the seek factor</strong>&nbsp;- A person looking for a product or service is in the seek mode, hoping to find what they are looking for. <a href="index.html">Try it now!</a></li>
-                    <li><strong>TRUST</strong>&nbsp;- The landing on the website is building the the relationship of trust. It is just like trying a new restaurant and looking at the menu.&nbsp;<a href="index.html">Try it now!</a></li>
+                    <li><strong><a href="https://www.interaction-design.org/literature/book/the-encyclopedia-of-human-computer-interaction-2nd-ed/emotion-and-website-design" target="_blank">HOPE the seek factor</a></strong>&nbsp;- A person looking for a product or service is in the seek mode, hoping to find what they are looking for. <a href="index.html">Try it now!</a></li>
+                    <li><strong><a href="https://www.interaction-design.org/literature/article/adoption-and-design-how-to-turn-prospects-into-users" target="_blank">TRUST</a></strong>&nbsp;- The landing on the website is building the the relationship of trust. It is just like trying a new restaurant and looking at the menu.&nbsp;<a href="index.html">Try it now!</a></li>
                     <li><strong>ACTION</strong>&nbsp;- The customer has decided to take action. All the emotional and thought requirements have been met. <a href="index.html">Try it now!</a></li>
                 </ol>
             </div>
@@ -214,8 +214,7 @@ s.parentNode.insertBefore(b, s);})();
         <div class="media-container-row">
 
             <div class="media-content align-right">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-5">
-                    Social Media - Live Bait</h1>
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-5">Branded Social Media Video</h1>
                 <div class="mbr-section-text mbr-white pb-3">
                     <p class="mbr-text mbr-fonts-style display-5">We created this social media video for a Chicago DJ. It advertised the DJ and &nbsp;nightclub.</p>
                 </div>
@@ -275,7 +274,7 @@ s.parentNode.insertBefore(b, s);})();
     </div>
 </section>
 
-<section class="mbr-section mbr-section__comments" id="facebook-comments-block-3u" data-rv-view="641" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="mbr-section mbr-section__comments" id="facebook-comments-block-3u" data-rv-view="787" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
          
     <div class="mbr-section__container mbr-section__container--isolated addons-container">
         <div class="addons-row">
