create github pages

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/e">how to make a website for free</a></section><section class="header7 cid-qvSK4HTIRN mbr-fullscreen mbr-parallax-background" id="header7-3">
+<section class="engine"><a href="https://mobirise.me/x">free css templates</a></section><section class="header7 cid-qvSK4HTIRN mbr-fullscreen mbr-parallax-background" id="header7-3">
 
     
 
@@ -164,7 +164,7 @@ s.parentNode.insertBefore(b, s);})();
         <div class="media-container-row">
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
-                    <div class="mbr-figure" style="width: 60%;">
+                    <div class="mbr-figure" style="width: 45%;">
                       <a href="#top"><img src="assets/images/seriodesignfxlogonewblackbgrd-348x348.jpg" alt="SERIO Design FX" title="Helping You Grow Your Business SERIO Design FX"></a>  
                     </div>
                     <div class="media-content">
@@ -368,7 +368,7 @@ s.parentNode.insertBefore(b, s);})();
 
 </section>
 
-<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="6031206250.727bfe1.6352da2b5e454c259824abfd719e6cfd" data-per-row-grid="4" id="instagram-feed-block-4o" data-rv-view="3205" style="background-image: url(assets/images/instagram-background.jpg); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="6031206250.727bfe1.6352da2b5e454c259824abfd719e6cfd" data-per-row-grid="4" id="instagram-feed-block-4o" data-rv-view="60" style="background-image: url(assets/images/instagram-background.jpg); padding-top: 40px; padding-bottom: 40px;">
     
     <div class="container container_toggle">
         <div class="row">
@@ -569,7 +569,7 @@ s.parentNode.insertBefore(b, s);})();
     </div>
 </section>
 
-<div id="custom-html-2c" custom-code="true" data-rv-view="71"><!-- Contact Form by Steve Riches - RichoSoft Squared - (C) 2016 - All Rights Reserved -->
+<div id="custom-html-2c" custom-code="true" data-rv-view="75"><!-- Contact Form by Steve Riches - RichoSoft Squared - (C) 2016 - All Rights Reserved -->
 <!-- December 2016 - www.richosoft2.co.uk -->
 <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
     <section>
