--- a/socialmedia.html
+++ b/socialmedia.html
@@ -115,7 +115,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/n">landing page templates</a></section><section class="mbr-section content5 cid-qDhb8wlDgZ mbr-parallax-background" id="content5-1d">
+<section class="engine"><a href="https://mobirise.me/p">site templates free download</a></section><section class="mbr-section content5 cid-qDhb8wlDgZ mbr-parallax-background" id="content5-1d">
 
     
 
@@ -134,7 +134,7 @@ s.parentNode.insertBefore(b, s);})();
     </div>
 </section>
 
-<section class="mbr-social-feed loading" id="feed-1e" data-facebook="SerioDesignFX" data-twitter="seriodesignfx" data-google="+CharlesKDavis" data-posts="8" data-youtube="UCrkwLLp3vRrF_HrQ_YlY6_Q" data-rv-view="643" style="background-color: rgb(135, 154, 159); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-social-feed loading" id="feed-1e" data-facebook="SerioDesignFX" data-twitter="seriodesignfx" data-google="+CharlesKDavis" data-posts="8" data-youtube="UCrkwLLp3vRrF_HrQ_YlY6_Q" data-rv-view="645" style="background-color: rgb(135, 154, 159); padding-top: 40px; padding-bottom: 40px;">
     
     <img class="social-feed-container-loading" alt="">
     <div class="social-feed-container">
