create github pages

--- a/company.html
+++ b/company.html
@@ -114,7 +114,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/f">simple website creator</a></section><section class="header7 cid-qCOP6PjyBA" data-bg-video="http://www.youtube.com/watch?v=uNCr7NdOJgw" id="header7-10">
+<section class="engine"><a href="https://mobirise.me/g">how to build a site</a></section><section class="header7 cid-qCOP6PjyBA" data-bg-video="http://www.youtube.com/watch?v=uNCr7NdOJgw" id="header7-10">
 
     
 
@@ -128,7 +128,7 @@ s.parentNode.insertBefore(b, s);})();
                 <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">Connect people, 
 <div>communities and business.</div></h1>
                 <div class="mbr-section-text mbr-white pb-3">
-                    <p class="mbr-text mbr-fonts-style display-5">Challenges of an ever changing <a href="index.html#header7-3">social network</a>.</p>
+                    <p class="mbr-text mbr-fonts-style display-5">Challenges of an ever changing <a href="index.html#header7-3" class="text-secondary">social network</a>.</p>
                 </div>
                 
             </div>
@@ -151,7 +151,7 @@ s.parentNode.insertBefore(b, s);})();
             <div class="media-content align-right">
                 <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">All In One Place</h1>
                 <div class="mbr-section-text mbr-white pb-3">
-                    <p class="mbr-text mbr-fonts-style display-5">&nbsp;A &nbsp;trusted provider of <a href="index.html#header7-3">products and services</a> that<br>connect&nbsp;people, <br>communities and business.</p>
+                    <p class="mbr-text mbr-fonts-style display-5">&nbsp;A &nbsp;trusted provider of <a href="index.html#header7-3" class="text-secondary">products and services</a> that<br>connect&nbsp;people, <br>communities and business.</p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-primary-outline display-4" href="index.html#form4-a">CONTACT US</a></div>
             </div>
@@ -217,7 +217,7 @@ s.parentNode.insertBefore(b, s);})();
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white display-7">
-                    © Copyright 2018<a href="https://blog.seriodesignfx.com" class="text-info">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
+                    © Copyright 2018<a href="https://blog.seriodesignfx.com" class="text-secondary">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
                 </p>
             </div>
         </div>
