--- a/disclaimer.html
+++ b/disclaimer.html
@@ -111,7 +111,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/k">develop your own website</a></section><section class="mbr-section content5 cid-qSVqMHD5qJ mbr-parallax-background" id="content5-4k">
+<section class="engine"><a href="https://mobirise.me/b">create a site for free</a></section><section class="mbr-section content5 cid-qSVqMHD5qJ mbr-parallax-background" id="content5-4k">
 
     
 
@@ -207,7 +207,7 @@ s.parentNode.insertBefore(b, s);})();
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white display-7">
-                    © Copyright 2018<a href="https://blog.seriodesignfx.com" class="text-info">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
+                    © Copyright 2018<a href="https://blog.seriodesignfx.com" class="text-secondary">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
                 </p>
             </div>
         </div>
