--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/x">free css templates</a></section><section class="header7 cid-qvSK4HTIRN mbr-fullscreen mbr-parallax-background" id="header7-3">
+<section class="engine"><a href="https://mobirise.me/b">how to create a website for free</a></section><section class="header7 cid-qvSK4HTIRN mbr-fullscreen mbr-parallax-background" id="header7-3">
 
     
 
@@ -145,7 +145,7 @@ s.parentNode.insertBefore(b, s);})();
             <div class="media-content align-right">
                 <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2"><em><br></em>Lead-Land<br>Convert</h1>
                 <div class="mbr-section-text mbr-white pb-3">
-                    <p class="mbr-text mbr-fonts-style display-7"><strong><em>Customer Converting Video &nbsp;Page Design</em><br><em>Social Media Video Lead Generation</em><br><em>Social Media Management Services</em><br><em>Proactive SEO Services</em></strong><br><em><br></em><em><a href="index.html#custom-html-3k" class="text-secondary">FREE Phone Consultation!!!</a></em><br></p>
+                    <p class="mbr-text mbr-fonts-style display-7"><strong><em>Customer Converting Video &nbsp;Page Design</em><br><em>Social Media Video Lead Generation</em><br><em>Social Media Management Services</em><br></strong><em><br></em><em><a href="index.html#custom-html-3k" class="text-secondary">FREE Phone Consultation!!!</a></em><br></p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-7" href="tel:+1-414-301-3159"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span><span style="font-size: 25.6px;"><br></span>&nbsp;FREE Quote!!!</a></div>
             </div>
@@ -672,7 +672,7 @@ s.parentNode.insertBefore(b, s);})();
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white display-7">
-                    © Copyright 2018<a href="https://blog.seriodesignfx.com" class="text-info">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
+                    © Copyright 2018<a href="https://blog.seriodesignfx.com" class="text-secondary">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
                 </p>
             </div>
         </div>
