--- a/seriodesignfxyoutube.html
+++ b/seriodesignfxyoutube.html
@@ -115,7 +115,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/j">website templates</a></section><section class="mbr-section content5 cid-qQr8jZRdIV mbr-parallax-background" id="content5-4f">
+<section class="engine"><a href="https://mobirise.me/l">free site templates</a></section><section class="mbr-section content5 cid-qQr8jZRdIV mbr-parallax-background" id="content5-4f">
 
     
 
@@ -134,7 +134,7 @@ s.parentNode.insertBefore(b, s);})();
     </div>
 </section>
 
-<section class="mbr-social-feed loading" id="feed-4g" data-facebook="" data-twitter="" data-google="" data-posts="5" data-youtube="UCrkwLLp3vRrF_HrQ_YlY6_Q" data-rv-view="677" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-social-feed loading" id="feed-4g" data-facebook="" data-twitter="" data-google="" data-posts="5" data-youtube="UCrkwLLp3vRrF_HrQ_YlY6_Q" data-rv-view="619" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 40px;">
     
     <img class="social-feed-container-loading" alt="">
     <div class="social-feed-container">
@@ -196,7 +196,7 @@ s.parentNode.insertBefore(b, s);})();
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white display-7">
-                    © Copyright 2018<a href="https://blog.seriodesignfx.com" class="text-info">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
+                    © Copyright 2018<a href="https://blog.seriodesignfx.com" class="text-secondary">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
                 </p>
             </div>
         </div>
