--- a/theoneserviceyouneed.html
+++ b/theoneserviceyouneed.html
@@ -120,7 +120,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/n">free landing page templates</a></section><section class="mbr-section content5 cid-qJRfD9oIsx mbr-parallax-background" id="content5-2z">
+<section class="engine"><a href="https://mobirise.me/l">free web templates</a></section><section class="mbr-section content5 cid-qJRfD9oIsx mbr-parallax-background" id="content5-2z">
 
     
 
@@ -251,7 +251,7 @@ s.parentNode.insertBefore(b, s);})();
     </div>
 </section>
 
-<section class="mbr-section mbr-section__comments" id="facebook-comments-block-37" data-rv-view="486" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 1.5rem;">
+<section class="mbr-section mbr-section__comments" id="facebook-comments-block-37" data-rv-view="244" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 1.5rem;">
          
     <div class="mbr-section__container mbr-section__container--isolated addons-container">
         <div class="addons-row">
@@ -317,7 +317,7 @@ s.parentNode.insertBefore(b, s);})();
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white display-7">
-                    © Copyright 2018<a href="https://blog.seriodesignfx.com" class="text-info">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
+                    © Copyright 2018<a href="https://blog.seriodesignfx.com" class="text-secondary">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
                 </p>
             </div>
         </div>
