create github pages

--- a/company.html
+++ b/company.html
@@ -122,7 +122,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
     
     <div class="mbr-overlay"></div>
     <div class="container">    
-        <h1 class="mbr-section-title mbr-fonts-style align-center mbr-black l-spacing3 display-2">Connect People, Communities and Business</h1>
+        <h1 class="mbr-section-title mbr-fonts-style align-center mbr-black l-spacing3 display-2">Empower People, Communities and Business</h1>
         
         <p class="mbr-fonts-style mbr-text align-center mbr-black display-6">Empowering people, communities and business.&nbsp;</p>
 
@@ -222,7 +222,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
             We Would Love To Hear From You</h2>
         <h3 class="mbr-fonts-style align-center mbr-section-subtitle display-6">Feel free to leave a comment and we will reply to you.</h3>
     </div>
-    <amp-facebook-comments height="50" layout="fixed-height" class="container comments-container mobirise-loader" data-numposts="2" data-href="http://www.directlyrics.com/adele-25-complete-album-lyrics-news.html">
+    <amp-facebook-comments height="50" layout="fixed-height" class="container comments-container mobirise-loader" data-numposts="2" data-href="https://seriodesignfx.com/company.html#header8-1n">
         <div placeholder="">
             <div class="mobirise-spinner">
                 <em></em>
