create github pages

--- a/ourstory.html
+++ b/ourstory.html
@@ -60,6 +60,12 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-black display-4" href="contact-serio-design-fx-best-video-social-media.html#header7-8"><span class="fa fa-phone mbr-iconfont mbr-iconfont-btn"></span>CALL 414-301-3159</a></div>
       </div>
     </amp-sidebar>
+
+<!-- Google Analytics -->
+<!-- AMP Analytics --><script async="" custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+<!-- /Google Analytics -->
+
+
   <section class="menu horizontal-menu cid-qXUjqYiM2E" id="menu1-g">
 
     
@@ -208,7 +214,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
                     <div class="mbr-fonts-style img-subtitle align-center display-4">May The FX Be With You</div>
                 </div>
                 <div class="media-content">
-                    <p class="mbr-text align-left mb-0 mbr-fonts-style mbr-black display-7"><strong>Although we were founded in 2005, </strong>our beginning goes back much further. I helped implement the internet for major corporations starting in 1990. The internet crashed and I found myself having to market myself as a UNIX Consultant.&nbsp;<br><br><strong>In 2005, I found myself developing websites </strong>for local business owners who needed someone to help them get there dreams off the ground.<br>I was right where you might be using Do-It-Yourself tools only to find the just didn't get the job done.<br><br>I've work for several corporations providing UNIX support services. I was the one person that could solve the problem.<br><br>A major futures trading company was experiencing system failure every month for 2 years. IBM had an open trouble ticket that was never solved. They brought me onboard and in 2 months I solved the problem.<strong><br></strong></p>
+                    <p class="mbr-text align-left mb-0 mbr-fonts-style mbr-black display-7"><strong>Although we were founded in 2005, </strong>our beginning goes back much further. I helped implement the internet for major corporations starting in 1990. The internet crashed and I found myself having to market myself as a UNIX Consultant.&nbsp;<br><br><strong>In 2005, I found myself developing websites </strong>for local business owners who needed someone to help them get there dreams off the ground.<br>I was right where you might be using Do-It-Yourself tools only to find they just didn't get the job done.<br><br>I've work for several corporations providing UNIX support services. I was the one person that could solve the problem.<br><br>A major futures trading company was experiencing system failure every month for 2 years. IBM had an open trouble ticket that was never solved. They brought me onboard and in 2 months I solved the problem.<strong><br></strong></p>
                 </div>
             </div>
         </div>
@@ -301,17 +307,17 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
         <div class="mbr-row mbr-justify-content-center">            
             <div class="amp-accordion mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-8 mbr-col-xl-8 align-left">
                 <div class="accordion-item">
-                    <h2 tabindex="0" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item146.toggleVisibility,amp-accordion-item246.hide,amp-accordion-item346.hide,amp-accordion-item446.hide,amp-accordion-item546.hide,amp-accordion-item646.hide">HONESTY&nbsp;</h2>
-                    <div class="accordion-item-body" id="amp-accordion-item146">
+                    <h2 tabindex="0" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item154.toggleVisibility,amp-accordion-item254.hide,amp-accordion-item354.hide,amp-accordion-item454.hide,amp-accordion-item554.hide,amp-accordion-item654.hide">HONESTY&nbsp;</h2>
+                    <div class="accordion-item-body" id="amp-accordion-item154">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             We will answer all questions with a truthful answer within the scope of our experience.</p>
                     </div>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="1" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item146.hide,amp-accordion-item246.toggleVisibility,amp-accordion-item346.hide,amp-accordion-item446.hide,amp-accordion-item546.hide,amp-accordion-item646.hide">
+                    <h2 tabindex="1" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item154.hide,amp-accordion-item254.toggleVisibility,amp-accordion-item354.hide,amp-accordion-item454.hide,amp-accordion-item554.hide,amp-accordion-item654.hide">
                         INTEGRITY</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item246">
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item254">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             Our services depend on the trust and effectiveness of our communications. &nbsp;We strive for openess and transparency in our dealings with clients. We will communicate regularly with the client and report on our activities completely
 and truthfully.</p>
@@ -319,35 +325,35 @@ and truthfully.</p>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="2" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item146.hide,amp-accordion-item246.hide,amp-accordion-item346.toggleVisibility,amp-accordion-item446.hide,amp-accordion-item546.hide,amp-accordion-item646.hide">
+                    <h2 tabindex="2" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item154.hide,amp-accordion-item254.hide,amp-accordion-item354.toggleVisibility,amp-accordion-item454.hide,amp-accordion-item554.hide,amp-accordion-item654.hide">
                         SERVICE</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item346">
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item354">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             We approach all projects and clients realizing that we provide a service. Our objective is to provide the best service and guidance within our experience.</p>
                     </div>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="3" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item146.hide,amp-accordion-item246.hide,amp-accordion-item346.hide,amp-accordion-item446.toggleVisibility,amp-accordion-item546.hide,amp-accordion-item646.hide">TEAM PLAYER</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item446">
+                    <h2 tabindex="3" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item154.hide,amp-accordion-item254.hide,amp-accordion-item354.hide,amp-accordion-item454.toggleVisibility,amp-accordion-item554.hide,amp-accordion-item654.hide">TEAM PLAYER</h2>
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item454">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             Our relationship with the client is as a member of the team. We wear many hats during the relationship and our focus is on the success of the client.</p>
                     </div>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="4" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item146.hide,amp-accordion-item246.hide,amp-accordion-item346.hide,amp-accordion-item446.hide,amp-accordion-item546.toggleVisibility,amp-accordion-item646.hide">
+                    <h2 tabindex="4" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item154.hide,amp-accordion-item254.hide,amp-accordion-item354.hide,amp-accordion-item454.hide,amp-accordion-item554.toggleVisibility,amp-accordion-item654.hide">
                         MASTERY</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item546">
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item554">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             We strive to master our knowledge and develop intuitively. We are constantly researching and learning looking for new ways to apply our skills.</p>
                     </div>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="5" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item146.hide,amp-accordion-item246.hide,amp-accordion-item346.hide,amp-accordion-item446.hide,amp-accordion-item546.hide,amp-accordion-item646.toggleVisibility">
+                    <h2 tabindex="5" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item154.hide,amp-accordion-item254.hide,amp-accordion-item354.hide,amp-accordion-item454.hide,amp-accordion-item554.hide,amp-accordion-item654.toggleVisibility">
                         LEADERSHIP</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item646">
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item654">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             We are constantly looking for the shortest distance to accomplish your goals. Simplicity is the key but it does not mean simplication.</p>
                     </div>
