--- a/portfolio.html
+++ b/portfolio.html
@@ -62,6 +62,12 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-black display-4" href="contact-serio-design-fx-best-video-social-media.html#header7-8"><span class="fa fa-phone mbr-iconfont mbr-iconfont-btn"></span>CALL 414-301-3159</a></div>
       </div>
     </amp-sidebar>
+
+<!-- Google Analytics -->
+<!-- AMP Analytics --><script async="" custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+<!-- /Google Analytics -->
+
+
   <section class="menu horizontal-menu cid-qXUjqYiM2E" id="menu1-s">
 
     
@@ -160,7 +166,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
     </div>
 </section>
 
-<amp-animation layout="nodisplay" trigger="visibility" class="cid-qY4BzLOXtU" id="header7-u" data-rv-view="581">
+<amp-animation layout="nodisplay" trigger="visibility" class="cid-qY4BzLOXtU" id="header7-u" data-rv-view="964">
     <script type="application/json">
     {
         "--width": "calc(0px - width('.animated-text'))",
